Finish Sum and myBind exercises

--- a/css-friends-08/skeleton/css/08-thumbs.css
+++ b/css-friends-08/skeleton/css/08-thumbs.css
@@ -1,1 +1,11 @@
 /* PHASE 8: Thumbs */
+.profile-friends {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.profile-friends > li {
+  width: 60px;
+  margin: 0 0 10px 0;
+}
+
